--- a/styles/style.css
+++ b/styles/style.css
@@ -42,9 +42,13 @@ body {
   margin-left: auto;
   margin-right: auto;
   padding: 0 20px;
-  width: 1338px;
+  width: 1378px;
   /* 1338 */
-  outline: 1px solid tomato;
+  /* outline: 1px solid tomato; */
+}
+
+.section {
+padding-top: 180px;
 }
 
 /* Logotype */
@@ -60,6 +64,20 @@ body {
 }
 
 /* Header */
+
+.header-section {
+  padding: 55px 0;
+}
+
+.header-section .list-item {
+  padding: 27px 0;
+}
+
+.logo-link {
+  padding-top: 23px;
+  padding-bottom: 22px;
+}
+
 .list-item {
   font-weight: var(--secondary-font-weight);
   color: var(--secondary-text-color);
@@ -76,6 +94,7 @@ body {
   border-radius: 10px;
   padding: 20px 56px;
   width: 312px;
+  height: 70px;
   background-color: #ffffff;
   margin-left: auto;
 }
@@ -102,6 +121,7 @@ body {
 
 .flex-container {
   display: flex;
+  align-items: center;
 }
 
 /* Hero section */
@@ -152,20 +172,30 @@ width: 530px;
   background: var(--background-color);
   border-radius: 10px;
 }
+
 .heading {
   font-weight: 600;
   font-size: 48px;
   color: var(--heading-color);
+  margin-bottom: 60px;
+}
+
+.skills-heading {
+  text-align: center;
 }
 
 .list-item-heading {
   font-weight: 600;
   font-size: 30px;
   color: var(--secondary-text-color);
+
+  margin-bottom: 20px;
 }
 
 .skills-description {
   font-size: 16px;
+  margin-bottom: 30px;
+  width: 350px;
 }
 
 .skills-button {
@@ -191,13 +221,65 @@ width: 530px;
 .skills-button:hover,
 .skills-button:focus,
 .skills-button-secondary:hover,
-.skills-button-secondary:focus {
+.skills-button-secondary:focus,
+.subscribe-button:hover,
+.subscribe-button:focus
+ {
   background-color: var(--heading-color);
 }
 
+.skills-item-listening {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 882px;
+  height: 338px;
+}
+
+.skills-thumb {
+  width: 324px;
+  margin-right: 114px;
+}
+
+.writing-reading-list {
+  display: flex;
+
+  margin-bottom: 30px;
+}
+
+.writing-reading-list > .skills-list-item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.writing-reading-list>.skills-list-item {
+  width: 426px;
+  border-radius: 10px;
+  padding: 32px 18px;  
+}
+
+.main-skills-list {
+  display: flex;
+}
+
+.speaking-item {
+padding: 32px 18px;
+margin-right: 30px; 
+}
+
 /* about section */
+
+.about-us-section {
+  display: flex;
+}
+
+.about-desc-division {
+  margin-right: 146px;
+}
+
 .about-description {
   line-height: 1.8;
+  width: 652px;
+  padding-bottom: 30px;
 }
 
 .about-list-item {
@@ -206,29 +288,158 @@ width: 530px;
   color: #2a3246;
 }
 
+.results-list {
+  display: flex;
+  justify-content: center;
+}
+
+.results-item {
+  text-align: center;
+  width: 108px;
+}
+
+.results-item:not(:last-child) {
+  margin-right: 131px;
+}
+
 /* Pricing section */
 .pricing-list-heading {
   line-height: 1.6;
-}
-
-.pricing-list-item {
-  font-size: 24px;
+  font-size: 30px;
   color: var(--secondary-text-color);
 }
 
+.pricing-list-item {
+ 
+    width: 426px;
+}
+
 .pricing-per-month {
+  width: 108px;
+
   font-size: 18px;
   color: #546269;
 }
 
+.pricing-list {
+  display: flex;
+}
+
+
+.pricing-list-item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.pricing-picture {
+  margin-bottom: 31px;
+}
+
+
+.price {
+  display: inline-flex;
+  align-items: baseline;
+  padding: 5px 23px 4px 29px;
+
+  width: 260px;
+  height: 45px;
+  border-radius: 5px;
+
+  background-color: #eeeeee;
+}
+
+.price > .price-item {
+  width: 76px;
+  margin-right: 28px;
+
+  font-size: 24px;
+  text-align: center;
+  color: var(--secondary-text-color);
+}
+
+.self-study-price {
+  margin-top: 30px;
+}
+
+.live-and-personal {
+  margin-top: 60px;
+}
+
+/* Contact us */
+
+.contact-us-thumb {
+  display: flex;
+}
+
+.contact-data {
+  margin-left: 145px;
+}
+
+.contact-us-description {
+  margin-bottom: 30px;
+  width: 654px;
+}
+
+.subscribe-button {
+  display: inline-block;
+  font-weight: 500;
+  font-size: 20px;
+  color: #FFFFFF;
+  background-color: var(--secondary-text-color);
+  border-radius: 10px;
+  cursor: pointer;
+
+  padding: 21.5px 104px;
+  margin-left: 30px;    
+}
+
+.form {
+  display: inline-block;
+  font-size: 16px;
+  line-height: 1.88;
+  color: var(--main-text-color);
+  border: 1px solid #8F95A5;
+  border-radius: 10px;
+
+  padding-left: 30px;
+
+  width: 420px;
+  height: 70px;
+}
+
+.contact-section {
+  padding-bottom: 55px;
+}
+
+
 /* Footer section */
 
-.footer-list-item {
+.footer-list-link {
   font-size: 24px;
   letter-spacing: 0.02em;
   color: var(--main-text-color);
+
+  padding: 31px 0;
+}
+
+.footer-list-item:not(:last-child) {
+  margin-right: 80px;
 }
 
 .footer {
   border-top: 1px solid #C4C4C4;
+  padding-bottom: 55px;
+}
+
+.footer-list {
+  display: flex;
+  margin-left: auto;
+}
+
+.footer-thumb {
+  display: flex;
+  align-items: center;
+}
+
+.logo-footer {
+  padding: 22px 0;
 }
