--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -206,6 +206,7 @@ body {
 .skills-list-item {
   background: var(--background-color);
   border-radius: 10px;
+  padding: 32px 18px;
 }
 
 .heading {
@@ -225,6 +226,10 @@ body {
   color: var(--secondary-text-color);
 
   margin-bottom: 20px;
+}
+
+.list-item-heading--margin {
+  margin-top: 24px;
 }
 
 .skills-description {
@@ -284,44 +289,77 @@ body {
   background-color: var(--heading-color);
 }
 
-.skills-item-listening {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 882px;
-  height: 338px;
+@media screen and (min-width: 1378px) {
+  .main-skills-list {
+      display: grid;
+      grid-template-columns: repeat(3, 426px);
+      grid-template-rows: 579px 338px;
+      gap: 30px;
+    }
+  
+    .speaking-item {
+      grid-row: 1 / 3;
+      grid-column: 1 / 2;
+    }
+  
+    .writing-item {
+      grid-row: 1 / 2;
+      grid-column: 2 / 3;
+    }
+  
+    .reading-item {
+      grid-row: 1 / 2;
+      grid-column: 3 / 4;
+    }
+  
+    .skills-item-listening {
+      grid-row: 2 / 3;
+      grid-column: 2 / 4;
+  
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  
+    .skills-thumb {
+      width: 324px;
+      margin-right: 114px;
+    }
 }
 
-.skills-thumb {
-  padding-left: 18px;
-  width: 324px;
-  margin-right: 114px;
-}
+// .skills-item-listening {
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   width: 882px;
+//   height: 338px;
+// }
 
-.writing-reading-list {
-  display: flex;
 
-  margin-bottom: 30px;
-}
+// .writing-reading-list {
+//   display: flex;
 
-.writing-reading-list > .skills-list-item:not(:last-child) {
-  margin-right: 30px;
-}
+//   margin-bottom: 30px;
+// }
 
-.writing-reading-list > .skills-list-item {
-  width: 426px;
-  border-radius: 10px;
-  padding: 32px 18px;
-}
+// .writing-reading-list > .skills-list-item:not(:last-child) {
+//   margin-right: 30px;
+// }
 
-.main-skills-list {
-  display: flex;
-}
+// .writing-reading-list > .skills-list-item {
+//   width: 426px;
+//   border-radius: 10px;
+//   padding: 32px 18px;
+// }
 
-.speaking-item {
-  padding: 32px 18px;
-  margin-right: 30px;
-}
+// .main-skills-list {
+//   display: flex;
+// }
+
+// .speaking-item {
+//   padding: 32px 18px;
+//   margin-right: 30px;
+// }
 
 /* about section */
 
@@ -522,6 +560,7 @@ body {
 
   font-size: 16px;
   line-height: 1.88;
+  cursor: text;
 
   transition: transform 800ms cubic-bezier(0.4, 0, 0.2, 1),
     font-size 800ms cubic-bezier(0.4, 0, 0.2, 1),
